# claude-emacs

./: .gitignore  README.md  install.sh  pyproject.toml
src/: __init__.py  server.py
