[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "claude-emacs"
version = "0.1.0"
description = "MCP-server for GNU Emacs-integrasjon med Claude Desktop"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = ["mcp>=1.0.0"]
keywords = ["mcp", "emacs", "claude", "ai"]

[project.scripts]
claude-emacs = "claude_emacs.server:main"

[project.urls]
Repository = "https://github.com/roffe/claude-emacs"

[tool.hatch.build.targets.wheel]
packages = ["src/claude_emacs"]
