[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-emacs"
version = "0.1.0"
description = "MCP-server for GNU Emacs-integrasjon med Claude Desktop"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = ["mcp>=1.0.0"]
keywords = ["mcp", "emacs", "claude", "ai"]

[project.scripts]
claude-emacs = "claude_emacs.server:main"

[project.urls]
Repository = "https://github.com/rolfmblindgren/claude-emacs"

[tool.setuptools]
packages = ["claude_emacs"]

[tool.setuptools.package-dir]
"claude_emacs" = "src"
